test dlya slavika

--- a/login/public/index.html
+++ b/login/public/index.html
@@ -54,7 +54,7 @@
     </script>
     
     <script id="user-playlist-template" type="text/x-handlebars-template">
-      <p>{{items.0.images.0.url}} </p>
+      <p>{{items.0.images.0.url}} 123 </p>
       <img width="150px" height="150px" src="{{items.0.images.0.url}}" />
       
     </script>
